src/test/deca/test_compilateur/context/invalid/created/binary_exp/op_comp/eq_A_float.deca
// Description :
//    test eq entre un A et un float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) Opérandes de type A, float, attendu: (int|float, int|float) ou (class|null, class|null) ou (bool, bool)
class A{}
{
A a;
float b;
boolean c = a == b;
}
